Revert "Missing menu entries when going to Jobs, Events #167"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,7 @@
                 <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="/#page-top">
-                <span class="logo">
-                    <img src="//opensourcedesign.net/images/opensourcedesign-logo.svg" class="logo" alt="Open Source Design Logo"/>
-                </span>
+                <span class="logo">{% include img/opensourcedesign-logo.svg %}</span>
                 Open Source Design
             </a>
         </div>
